fixing the gap property

--- a/04-Flex/07/styles.css
+++ b/04-Flex/07/styles.css
@@ -24,7 +24,7 @@ body {
   gap: 0 2em;
 }
 .flex-container.gap {
-  gap: 1.5em;
+  gap: 2em;
 }
 
 
